Fix title, add credits in readme, fix word break in lightbox info, update translation file.

--- a/assets/css/lity-styles.css
+++ b/assets/css/lity-styles.css
@@ -55,6 +55,7 @@ img[data-lity]:hover {
 .lity-info > * {
   color: #fafafa;
   width: 100%;
+  word-break: break-all;
 }
 
 .lity-info > h4 {
